[package]
name = "secure-password-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
rand = "0.8.5"
rpassword = "7.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0.1"
clap = { version = "4.4", features = ["derive"] }
blake3 = "1.5.0"
